# dserver-notification-plugin

./: CLAUDE.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
dserver_notification_plugin/: __init__.py  config.py
tests/: conftest.py  test_webhook_hardening.py
